# temporal-eigenstate-networks

./: .gitignore  API_QUICK_REFERENCE.md  ARCHITECTURE_OPTIMIZATIONS.md  BUGFIXES_SUMMARY.md  CONFIDENTIALITY.md  CRITICAL_FIXES_ROUND2.md  FINAL_OPTIMIZATIONS.md  GPU_NATIVE_COMPLETE.md  GPU_TRAINING_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  OPTIMIZATIONS_COMPLETE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FIX_SUMMARY.md  README.md  SCRIPT_UPDATES.md  SECURITY.md  TRAINING_OPTIMIZATIONS_COMPLETE.md  TRAINING_SCRIPT_UPDATE.md  UPDATE_COMPLETE.md  UPDATE_SUMMARY.md  complete_example.py  pyproject.toml  requirements.txt  setup.py  ten_production_code.py  test_chunk_loading.py  test_dataloader.py  test_improved_model.py  test_training_update.py
docs/: ARCHITECTURE_EVALUATION.md  BEAST_MODE_CONFIGS.md  COMMAND_FIX.md  DATASET_GUIDE.md  DEADLOCK_FIX.md  DIGITALOCEAN_QUICKSTART.md  DIGITALOCEAN_SETUP_SUMMARY.md  FAST_PRETOKENIZATION.md  GPU_SELECTION_GUIDE.md  HANG_TROUBLESHOOTING.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION.md  README.md  SPEED_OPTIMIZATION.md  STREAMING_TRAINING.md  TRAINING_QUICKSTART.md  TRAINING_READY.md
examples/: COLAB_GUIDE.md  NOTEBOOK_REVIEW.md  QUICK_REFERENCE.md  benchmarks.py  complete_example.py  google_colab_training.ipynb  multimodal_example.py  quickstart.ipynb  sequence_labeling_example.py  text_classification_example.py  timeseries_example.py  train_digitalocean.py
paper/: paper.tex  ten.tex
scripts/: beast_mode.sh  benchmark.py  benchmark_performance.py  diagnose_hang.sh  download_datasets.py  fix_deadlock.sh  generate_figures.py  pretokenize_and_pack.py  restart_training.sh  restart_training_optimized.sh  run_all.py  run_definitive.py  run_long_context.py  run_remaining.py  setup_digitalocean.sh  speed_benchmark.py  start_training.sh  train.py  train_final_fix.sh  train_large_reduced.sh  train_medium.sh  train_medium_fixed.sh  train_micro_test.sh  train_nano_test.sh  train_singleprocess.sh  train_small.sh  train_small_32k.sh  train_small_efficient.sh
src/: __init__.py  eval.py  model.py  multimodal.py  optimizations.py  train.py  visualize.py
ten/: __init__.py  ten.py  triton_scan.py
ten/models/: __init__.py  ten_chunked.py  ten_fft.py  ten_final.py  ten_pro.py  ten_sequential.py  ten_ssd.py  ten_unified.py
tests/: test_installation.py  test_model.py  test_verification.py
